refactor: use getFirst() instead of get(0) as CI runs on Java 21